--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                         <a class="nav-link page-scroll" href="reward.html">FORGING</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#soon">EXPLORER</a>
+                        <a class="nav-link page-scroll" href="http://nbcportal.pro" target="_blank">EXPLORER</a>
                     </li>
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="https://ndxseed.npay.life/index.html" target="_blank">Web Client</a>
+                    <a class="btn-outline-sm" href="https://ndxseed.npay.life" target="_blank">Web Client</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -344,6 +344,49 @@
         </div> <!-- end of container -->
     </div> <!-- end of basic-1 -->
     <!-- end of forging -->
+
+
+    <!-- News -->
+    <div id="news" class="cards-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="above-heading">LATEST NEWS</div>
+                    <h2 class="h2-heading">News of nDEX Network Blockchain</h2>
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+            <div class="row">
+                <div class="col-lg-12">
+
+                    <!-- Card -->
+                    <div class="card">
+                            <img class="img-fluid" src="images/airdrop.png" alt="Airdrop" style="height: 200px;margin-bottom: 20px;">
+                        <div class="card-body">
+                            <a href="https://www.nxter.org/tips-tricks-nxt-ardor-clones-how-to-retrieve-your-airdropped-coins-without-exposing-your-passphrase-in-the-clones-wallet/">
+                            <h4 class="card-title">Tips & Tricks</h4>
+                            <p>How to retrieve your airdropped coins without exposing your passphrase in the clone’s wallet....</p>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                    <!-- Card -->
+                    <div class="card">
+                            <img class="img-fluid" src="images/nxt-ann.png" alt="Announcement" style="height: 200px;margin-bottom: 20px;">
+                        <div class="card-body">
+                            <a href="https://www.jelurida.com/news/weekly-update-2020-02-17">
+                            <h4 class="card-title">Official Announcement </h4>
+                            <p>In the announcement nDEX explains that they have chosen Nxt for its stability and massive opportunities....</p>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- end of card -->
+
+                </div> <!-- end of col -->
+            </div> <!-- end of row -->
+        </div> <!-- end of container -->
+    </div> <!-- end of cards-1 -->
+    <!-- end of News -->
 
 
     <!-- Social Media -->
