--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a class="nav-link page-scroll" href="reward.html">FORGING</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="http://nbcportal.pro" target="_blank">EXPLORER</a>
+                        <a class="nav-link page-scroll" href="https://www.ndex.pro" target="_blank">EXPLORER</a>
                     </li>
                 </ul>
                 <span class="nav-item">
