--- a/wallet.html
+++ b/wallet.html
@@ -63,7 +63,7 @@
                         <a class="nav-link page-scroll" href="reward.html">FORGING</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#soon">EXPLORER</a>
+                        <a class="nav-link page-scroll" href="https://www.ndex.pro">EXPLORER</a>
                     </li>
                 </ul>
                 <span class="nav-item">
