--- a/developer.html
+++ b/developer.html
@@ -122,7 +122,7 @@
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="https://t.me/ndexofficialchannel">
+                            <a href="https://t.me/ndexnetwork">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-telegram fa-stack-1x"></i>
                             </a>
